[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/square.png" type="Texture" id=1]
[ext_resource path="res://scripts/tile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="tile" type="Node2D" groups=["tile"]]
z_index = -1
script = ExtResource( 2 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource( 1 )
shape_centered = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
